force-app/main/default/objects/Retail_Store_Visit__c/Retail_Store_Visit__c.object-meta.xml
<CustomObject>
    <description>Record of a visit to a retail store with information about compliance</description>
    <label>Retail Store Visit</label>
    <nameField>
        <displayFormat>SV - {000000}</displayFormat>
        <label>Store Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Store Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>