force-app/main/default/objects/Retail_Store_Visit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account that was visited</description>
    <inlineHelpText>Name of the store visited</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Store Visits</relationshipLabel>
    <relationshipName>Retail_Store_Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>