force-app/main/default/objects/Retail_Store_Visit__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>This is the seven digit account number of the store visited</description>
    <formula>Account__r.AccountNumber</formula>
    <inlineHelpText>Auto-populated: This is the seven digit account number for the store</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>