force-app/main/default/objects/Retail_Store_Visit__c/fields/Account_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Account_Receivables__c</fullName>
    <description>Accounts Receivables collection efforts Accounts Receivables collection efforts Accounts Receivables collection efforts recorded in A/R notes. A/R’s over 90 days with balances of $5,000+.</description>
    <inlineHelpText>Accounts Receivables collection efforts recorded in A/R notes. A/R’s over 90 days with balances of $5,000+.</inlineHelpText>
    <label>Account Receivables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>