force-app/main/default/objects/Retail_Store_Visit__c/fields/Account_ROM_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ROM_ID__c</fullName>
    <description>Account ROM ID</description>
    <formula>Account__r.Account_ROM__c</formula>
    <inlineHelpText>Account ROM ID</inlineHelpText>
    <label>Account ROM ID</label>
    <type>Text</type>
</CustomField>