force-app/main/default/objects/Retail_Store_Visit__c/fields/Account_ROM_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_ROM_Name__c</fullName>
    <description>Retail Operations Manager Assigned to the Account</description>
    <formula>Account__r.AccountROMName__c</formula>
    <inlineHelpText>Account ROM Name</inlineHelpText>
    <label>Account ROM Name</label>
    <type>Text</type>
</CustomField>