force-app/main/default/objects/Retail_Store_Visit__c/fields/Action_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Action_Step_1__c</fullName>
    <description>Action items #1</description>
    <inlineHelpText>Action Item 1</inlineHelpText>
    <label>Action Step 1</label>
    <type>TextArea</type>
</CustomField>