force-app/main/default/objects/Retail_Store_Visit__c/fields/Action_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Action_Step_2__c</fullName>
    <description>Action item #2</description>
    <inlineHelpText>Action item 2</inlineHelpText>
    <label>Action Step 2</label>
    <type>TextArea</type>
</CustomField>