force-app/main/default/objects/Retail_Store_Visit__c/fields/Action_Step_3__c.field-meta.xml
<CustomField>
    <fullName>Action_Step_3__c</fullName>
    <description>Action item #3</description>
    <inlineHelpText>Action Item #3</inlineHelpText>
    <label>Action Step 3</label>
    <type>TextArea</type>
</CustomField>