force-app/main/default/objects/Retail_Store_Visit__c/fields/Bank_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Bank_Deposits__c</fullName>
    <description>Bank deposits conducted daily &amp; sent to RW weekly (Monday&apos;s).</description>
    <inlineHelpText>Bank deposits conducted daily &amp; sent to RW weekly (Monday&apos;s).</inlineHelpText>
    <label>Bank Deposits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>