force-app/main/default/objects/Retail_Store_Visit__c/fields/Cash_Declared_Accurately__c.field-meta.xml
<CustomField>
    <fullName>Cash_Declared_Accurately__c</fullName>
    <description>Cash declared accurately/daily with overs/shorts recovered.</description>
    <inlineHelpText>Cash declared accurately/daily with overs/shorts recovered.</inlineHelpText>
    <label>Cash Declared Accurately</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>