force-app/main/default/objects/Retail_Store_Visit__c/fields/Cash_Drawer_Secure__c.field-meta.xml
<CustomField>
    <fullName>Cash_Drawer_Secure__c</fullName>
    <description>Cash drawer locked at all times, Petty cash at end of day in back</description>
    <inlineHelpText>Cash drawer locked at all times, Petty cash at end of day in back</inlineHelpText>
    <label>Cash Drawer Secure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>