force-app/main/default/objects/Retail_Store_Visit__c/fields/Checkview_Security__c.field-meta.xml
<CustomField>
    <fullName>Checkview_Security__c</fullName>
    <description>Checkview security/surveillance equipment operating - quarterly test</description>
    <inlineHelpText>Checkview security/surveillance equipment operating - quarterly test</inlineHelpText>
    <label>Checkview Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>