force-app/main/default/objects/Retail_Store_Visit__c/fields/Cleanliness_Standards__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Standards__c</fullName>
    <description>Cleanliness standards met.</description>
    <inlineHelpText>Cleanliness standards met. Inspect windows, dusting, vacuuming and bathroom. The cash wrap is neat and organized.</inlineHelpText>
    <label>Cleanliness Standards</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>