force-app/main/default/objects/Retail_Store_Visit__c/fields/Correct_Decals__c.field-meta.xml
<CustomField>
    <fullName>Correct_Decals__c</fullName>
    <description>Correct decals on trucks - Shoemobiles have the current Red Wing Chassis and box logo/wrap. Verify correct phone numbers and DOT number on truck</description>
    <inlineHelpText>Correct decals on trucks - Shoemobiles have the current Red Wing Chassis and box logo/wrap. Verify correct phone numbers and DOT number on truck</inlineHelpText>
    <label>Correct Truck Decals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>