force-app/main/default/objects/Retail_Store_Visit__c/fields/Crisis_MGT_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Crisis_MGT_Communicated__c</fullName>
    <description>Crisis Management team/process communicated to store staff.</description>
    <inlineHelpText>Crisis Management team/process communicated to store staff.</inlineHelpText>
    <label>Crisis MGT Communicated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>