force-app/main/default/objects/Retail_Store_Visit__c/fields/Current_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Visit_Date__c</fullName>
    <description>Date the store visit occurred</description>
    <inlineHelpText>Date the store visit occurred</inlineHelpText>
    <label>Current Visit Date</label>
    <type>Date</type>
</CustomField>