force-app/main/default/objects/Retail_Store_Visit__c/fields/DOT_Regulations__c.field-meta.xml
<CustomField>
    <fullName>DOT_Regulations__c</fullName>
    <description>DOT Regulations - Preventative Maintenance - Shoemobiles scheduled for preventative maintenance on a regular basis and the scheduled dates are posted to Outlook calendar.</description>
    <inlineHelpText>DOT Regulations - Preventative Maintenance - Shoemobiles scheduled for preventative maintenance on a regular basis and the scheduled dates are posted to Outlook calendar.</inlineHelpText>
    <label>DOT Regulations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>