force-app/main/default/objects/Retail_Store_Visit__c/fields/Employee_Training_Current__c.field-meta.xml
<CustomField>
    <fullName>Employee_Training_Current__c</fullName>
    <description>Employee Emod training up-to-date</description>
    <inlineHelpText>Employee Emod training up-to-date</inlineHelpText>
    <label>Employee Training Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>