force-app/main/default/objects/Retail_Store_Visit__c/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <description>General Comments</description>
    <inlineHelpText>General Comments</inlineHelpText>
    <label>General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>