force-app/main/default/objects/Retail_Store_Visit__c/fields/Hero_Table__c.field-meta.xml
<CustomField>
    <fullName>Hero_Table__c</fullName>
    <description>Hero table set up to directive.</description>
    <inlineHelpText>Hero table set up to directive. Refer to Hero table set up document.</inlineHelpText>
    <label>Hero Table</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>