force-app/main/default/objects/Retail_Store_Visit__c/fields/Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit__c</fullName>
    <description>Last Store Visit Date</description>
    <formula>Account__r.ROM_Last_Visit__c</formula>
    <inlineHelpText>Last Store Visit Date</inlineHelpText>
    <label>Last Visit</label>
    <type>Date</type>
</CustomField>