force-app/main/default/objects/Retail_Store_Visit__c/fields/Operations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Operations_Comments__c</fullName>
    <description>Operations Comments</description>
    <inlineHelpText>Additional Comments</inlineHelpText>
    <label>Operations Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>