force-app/main/default/objects/Retail_Store_Visit__c/fields/Overtime_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Reviewed__c</fullName>
    <description>Overtime hours exceeding 44/week approved by ROM</description>
    <inlineHelpText>Overtime hours exceeding 44/week approved by ROM</inlineHelpText>
    <label>Overtime Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>