force-app/main/default/objects/Retail_Store_Visit__c/fields/Packing_Slips_Updated__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slips_Updated__c</fullName>
    <description>Packing slips contain initials of associates receiving product in file</description>
    <inlineHelpText>Packing slips contain initials of associates receiving product in file</inlineHelpText>
    <label>Packing Slips Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>