force-app/main/default/objects/Retail_Store_Visit__c/fields/PCI_Compliant__c.field-meta.xml
<CustomField>
    <fullName>PCI_Compliant__c</fullName>
    <description>Shredder, File cabinet and credit card imprinter in operating condition. No credit card numbers written in rolodexes or stored on spreadsheets at POS</description>
    <inlineHelpText>Shredder, File cabinet and credit card imprinter in operating condition. No credit card numbers written in rolodexes or stored on spreadsheets at POS</inlineHelpText>
    <label>PCI Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>