force-app/main/default/objects/Retail_Store_Visit__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <description>Store Location</description>
    <formula>Account__r.M3_Location_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Store Location</inlineHelpText>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>