force-app/main/default/objects/Retail_Store_Visit__c/fields/Process_30_Day_Comfort_and_Defects__c.field-meta.xml
<CustomField>
    <fullName>Process_30_Day_Comfort_and_Defects__c</fullName>
    <description>Process 30 Day Comfort and Defects</description>
    <inlineHelpText>Process 30 Day Comfort and Defects</inlineHelpText>
    <label>Process 30 Day Comfort and Defects</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>