force-app/main/default/objects/Retail_Store_Visit__c/fields/Proper_Brand_Signage__c.field-meta.xml
<CustomField>
    <fullName>Proper_Brand_Signage__c</fullName>
    <description>Signage correct and in good condition.</description>
    <inlineHelpText>Signage correct and in good condition.Current marketing signage is be used. Outdated signage is not used. Open sign, store hours, thank you, and for work and play window decals are in good condition.</inlineHelpText>
    <label>Proper Brand Signage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>