force-app/main/default/objects/Retail_Store_Visit__c/fields/Proper_Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Proper_Dress_Code__c</fullName>
    <description>Proper dress code (refer to employee handbook)</description>
    <inlineHelpText>Proper dress code (refer to employee handbook)</inlineHelpText>
    <label>Proper Dress Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>