force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Lead_Generation__c.field-meta.xml
<CustomField>
    <fullName>Review_Lead_Generation__c</fullName>
    <description>Inspect IC$ Lead Tracker, FSLs and Email collection</description>
    <inlineHelpText>Refer to lead tracker, Eloqua, and Email capture report</inlineHelpText>
    <label>Review Lead Generation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>