force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_maintenance_issues__c.field-meta.xml
<CustomField>
    <fullName>Review_maintenance_issues__c</fullName>
    <description>Review maintenance issues.</description>
    <inlineHelpText>Review maintenance issues. Maintenance issues are logged in SharePoint.</inlineHelpText>
    <label>Review Maintenance Issues</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>