force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Monthly_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Review_Monthly_Schedules__c</fullName>
    <description>Review monthly schedules for maximum productivity/SPH</description>
    <inlineHelpText>Review monthly schedules for maximum productivity/SPH</inlineHelpText>
    <label>Review Monthly Schedules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>