force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Negative_Reports__c.field-meta.xml
<CustomField>
    <fullName>Review_Negative_Reports__c</fullName>
    <description>Review negative detail reports</description>
    <inlineHelpText>Review negative detail reports</inlineHelpText>
    <label>Review Negative Reports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>