force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Open_Docs__c.field-meta.xml
<CustomField>
    <fullName>Review_Open_Docs__c</fullName>
    <description>Review all Open Documents: Transfer ins, Transfer outs, In-transit invoices - investigate OPN items exceeding 10 days</description>
    <inlineHelpText>Review all Open Documents: Transfer ins, Transfer outs, In-transit invoices - investigate OPN items exceeding 10 days</inlineHelpText>
    <label>Review Open Docs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>