force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Previous_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Review_Previous_Action_Items__c</fullName>
    <description>Review action items from last visit</description>
    <inlineHelpText>Review action items from last visit.Send previous store visit report to manager prior to visit for discussion.</inlineHelpText>
    <label>Review Previous Action Items</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>