force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Redline_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Review_Redline_Inventory__c</fullName>
    <description>Review Redline &amp; Inventory Management (refer to SOP)</description>
    <inlineHelpText>Review Redline &amp; Inventory Management (refer to SOP)</inlineHelpText>
    <label>Review Redline &amp; Inventory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>