force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Review_Refunds__c</fullName>
    <description>Refunds reviewed – 10 transactions, include documentation (refund analysis)</description>
    <inlineHelpText>Refunds reviewed – 10 transactions, include documentation (refund analysis)</inlineHelpText>
    <label>Review Refunds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>