force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Safety_Toe_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Review_Safety_Toe_Purchase__c</fullName>
    <description>Maximize lead development by spot checking receipts of customer history for all safety toe purchases (Where do you work, what do you do, do you have a shoe program)</description>
    <inlineHelpText>Maximize lead development by spot checking receipts of customer history for all safety toe purchases (Where do you work, what do you do, do you have a shoe program)</inlineHelpText>
    <label>Review Safety Toe Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>