force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_SOP__c.field-meta.xml
<CustomField>
    <fullName>Review_SOP__c</fullName>
    <description>Review Standard Operating Procedure (SOP)</description>
    <inlineHelpText>Review Standard Operating Procedure (SOP)</inlineHelpText>
    <label>Review SOP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>