force-app/main/default/objects/Retail_Store_Visit__c/fields/Review_Wall_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Wall_Count__c</fullName>
    <description>Review prior months Wall Counts address variances - select one style for accuracy</description>
    <inlineHelpText>Review prior months Wall Counts address variances - select one style for accuracy</inlineHelpText>
    <label>Review Wall Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>