force-app/main/default/objects/Retail_Store_Visit__c/fields/ROM_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROM_Phone__c</fullName>
    <description>ROM Phone for migration of ROM Visit Reports</description>
    <inlineHelpText>ROM Phone for migration of ROM Visit Reports</inlineHelpText>
    <label>ROM Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>