force-app/main/default/objects/Retail_Store_Visit__c/fields/RWfB_Communication_Binder__c.field-meta.xml
<CustomField>
    <fullName>RWfB_Communication_Binder__c</fullName>
    <description>Indicates whether or not the store RWfB Binder is current and accurate</description>
    <inlineHelpText>Indicates whether or not the store RWfB Binder is current and accurate</inlineHelpText>
    <label>RWfB Communication Binder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>