force-app/main/default/objects/Retail_Store_Visit__c/fields/RWfB_Communication_Posted__c.field-meta.xml
<CustomField>
    <fullName>RWfB_Communication_Posted__c</fullName>
    <description>Indicates whether or not the store has posted the most recent RWfB Communication</description>
    <inlineHelpText>Indicates whether or not the store has posted the most recent RWfB Communication</inlineHelpText>
    <label>RWfB Communication Posted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>