force-app/main/default/objects/Retail_Store_Visit__c/fields/Sales_and_Accessories_Performance__c.field-meta.xml
<CustomField>
    <fullName>Sales_and_Accessories_Performance__c</fullName>
    <description>Review sales and accessories performance with team</description>
    <inlineHelpText>Review store performance in sales to last year and budget, accessories,sales, footbed &amp; sock conversion rate</inlineHelpText>
    <label>Sales and Accessories Performance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>