force-app/main/default/objects/Retail_Store_Visit__c/fields/Sales_and_Profit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_and_Profit_Comments__c</fullName>
    <description>Sales and Profit Comments</description>
    <inlineHelpText>Additional Comments</inlineHelpText>
    <label>Sales and Profit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>