force-app/main/default/objects/Retail_Store_Visit__c/fields/Sales_Goals_Visible__c.field-meta.xml
<CustomField>
    <fullName>Sales_Goals_Visible__c</fullName>
    <description>Verify store sales goals are visible and known</description>
    <inlineHelpText>Verify goal board is up to date and team members know what their goals are for the day</inlineHelpText>
    <label>Sales Goals Visible</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>