force-app/main/default/objects/Retail_Store_Visit__c/fields/Security_Installed__c.field-meta.xml
<CustomField>
    <fullName>Security_Installed__c</fullName>
    <description>Babaco security system installed an in working order - test quarterly.</description>
    <inlineHelpText>Babaco security system installed an in working order - test quarterly.</inlineHelpText>
    <label>Security Installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>