force-app/main/default/objects/Retail_Store_Visit__c/fields/Shoe_Repair_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Repair_Reviewed__c</fullName>
    <description>Shoe Repair precollected and worn defects reviewed. Verify credit memo&apos;s match RMM&apos;s processed</description>
    <inlineHelpText>Shoe Repair precollected and worn defects reviewed. Verify credit memo&apos;s match RMM&apos;s processed</inlineHelpText>
    <label>Shoe Repair Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>