force-app/main/default/objects/Retail_Store_Visit__c/fields/Shoemobile_Calendars_Posted__c.field-meta.xml
<CustomField>
    <fullName>Shoemobile_Calendars_Posted__c</fullName>
    <description>Shoemobile Calendars posted to Outlook including account profile, contact, and forecasted pairs. Each store post 3 wall calendars to show 3 months worth of bookings, updated regularly</description>
    <inlineHelpText>Shoemobile Calendars posted to Outlook including account profile, contact, and forecasted pairs. Each store post 3 wall calendars to show 3 months worth of bookings, updated regularly</inlineHelpText>
    <label>Shoemobile Calendars Posted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>