force-app/main/default/objects/Retail_Store_Visit__c/fields/Shoemobile_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shoemobile_Comments__c</fullName>
    <description>Additional Shoemobile comments.</description>
    <inlineHelpText>Any additional Shoemobile comments</inlineHelpText>
    <label>Shoemobile Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>