force-app/main/default/objects/Retail_Store_Visit__c/fields/Stockroom_Standards__c.field-meta.xml
<CustomField>
    <fullName>Stockroom_Standards__c</fullName>
    <description>Stockroom Standards met.</description>
    <inlineHelpText>Stockroom Standards met. Stock and workbench are organized and neat. Special orders are up to date. Defectives are in order.</inlineHelpText>
    <label>Stockroom Standards</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>