force-app/main/default/objects/Retail_Store_Visit__c/fields/Store_Filing_System__c.field-meta.xml
<CustomField>
    <fullName>Store_Filing_System__c</fullName>
    <description>Store filing system implemented (refer to SOP for details)</description>
    <inlineHelpText>Store filing system implemented (refer to SOP for details)</inlineHelpText>
    <label>Store Filing System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>