force-app/main/default/objects/Retail_Store_Visit__c/fields/Store_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager_Name__c</fullName>
    <description>Store manager name during the visit</description>
    <inlineHelpText>Store manager name during the visit</inlineHelpText>
    <label>Store Manager Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>