force-app/main/default/objects/Retail_Store_Visit__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <description>Store Number</description>
    <formula>Account__r.Store_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Store Number</inlineHelpText>
    <label>Store Number</label>
    <type>Text</type>
</CustomField>