force-app/main/default/objects/Retail_Store_Visit__c/fields/Store_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Phone_Number__c</fullName>
    <description>Store Phone Number</description>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone number on the account</inlineHelpText>
    <label>Store Phone Number</label>
    <type>Text</type>
</CustomField>