force-app/main/default/objects/Retail_Store_Visit__c/fields/Store_Presentation_Standards__c.field-meta.xml
<CustomField>
    <fullName>Store_Presentation_Standards__c</fullName>
    <description>Store Presentation meets Red Wing standards</description>
    <inlineHelpText>Store Presentation meets Red Wing standards</inlineHelpText>
    <label>Store Presentation Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>