force-app/main/default/objects/Retail_Store_Visit__c/fields/Truck_Log_Book_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Truck_Log_Book_Reviewed__c</fullName>
    <description>Driver Logs in Use - Each shoemobile driver is maintaining the required truck log and doing the required truck inspections daily</description>
    <inlineHelpText>Driver Logs in Use - Each shoemobile driver is maintaining the required truck log and doing the required truck inspections daily.</inlineHelpText>
    <label>Truck Log Book Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>