force-app/main/default/objects/Retail_Store_Visit__c/fields/Truck_Standard_External__c.field-meta.xml
<CustomField>
    <fullName>Truck_Standard_External__c</fullName>
    <description>Outside of truck maintained - The outside of the truck is clean and all glass and mirrors free of cracks. The tires in safe condition, properly inflated, and all lights operational</description>
    <inlineHelpText>Outside of truck maintained - The outside of the truck is clean and all glass and mirrors free of cracks. The tires in safe condition, properly inflated, and all lights operational</inlineHelpText>
    <label>Truck Standard External</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>