force-app/main/default/objects/Retail_Store_Visit__c/fields/Truck_Standard_Internal__c.field-meta.xml
<CustomField>
    <fullName>Truck_Standard_Internal__c</fullName>
    <description>Inside of truck maintained - Verify cab is clutter free. Truck box aisles clean and boot displays organized. Truck is adequately stocked for each truck run. Display items properly tethered</description>
    <inlineHelpText>Inside of truck maintained - Verify cab is clutter free. Truck box aisles clean and boot displays organized. Truck is adequately stocked for each truck run. Display items properly tethered.</inlineHelpText>
    <label>Truck Standard Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>