force-app/main/default/objects/Retail_Store_Visit__c/fields/UFX_Comments__c.field-meta.xml
<CustomField>
    <fullName>UFX_Comments__c</fullName>
    <description>UFX Comments</description>
    <inlineHelpText>Additional Comments</inlineHelpText>
    <label>UFX Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>