force-app/main/default/objects/Retail_Store_Visit__c/fields/UFX_Merchandising_Standards__c.field-meta.xml
<CustomField>
    <fullName>UFX_Merchandising_Standards__c</fullName>
    <description>UFX merchandising standards met</description>
    <inlineHelpText>UFX merchandising standards met. Footwear merchandised by brand, duty &amp; family. Current signage,POP and fixtures are used and in good condition. Footbeds and socks are merchandised to standard.</inlineHelpText>
    <label>UFX Merchandising Standards</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>