force-app/main/default/objects/Retail_Store_Visit__c/fields/UFX_Selling_Steps__c.field-meta.xml
<CustomField>
    <fullName>UFX_Selling_Steps__c</fullName>
    <description>UFX selling steps are being followed</description>
    <inlineHelpText>UFX selling steps are being followed. Review and/or complete selling assessment with team. Forms available on Teams.</inlineHelpText>
    <label>UFX Selling Steps</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_Yes_No</valueSetName>
    </valueSet>
</CustomField>